thread-pool: Unref source after mainloop has quit to avoid races in GLib

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=723741